# yoink-insight

./: README.md  pyproject.toml
frontend/: manifest.tsx  node_modules
frontend/src/: types.ts
frontend/src/api/: insight.ts
frontend/src/pages/admin/access/: index.tsx
frontend/src/pages/settings/: index.tsx
src/yoink_insight/: __init__.py  activity.py  config.py  plugin.py
src/yoink_insight/api/: router.py  schemas.py
src/yoink_insight/bot/: middleware.py
src/yoink_insight/commands/: __init__.py  _runner.py  about.py  access.py  settings.py  summary.py
src/yoink_insight/i18n/locales/: en.yml  ru.yml
src/yoink_insight/services/: access.py  gemini.py
src/yoink_insight/storage/: models.py  repos.py
