[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoink-insight"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "yoink-core>=0.1.0",
    "pydantic-settings>=2.7",
    "google-genai>=1.10",
    "youtube-transcript-api>=1.0",
]

[project.entry-points."yoink.plugins"]
insight = "yoink_insight:InsightPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
